Fixed XB Modern Screenshot
- Fixed an issue where text within the notification would overlap when generating screenshots using the XB Modern preset

--- a/notify/presets/xboxone/styles.css
+++ b/notify/presets/xboxone/styles.css
@@ -284,6 +284,11 @@ body[ss] .wrapper#achcontent {
     column-gap: calc(10px * var(--scale));
 }
 
+body[ss] .wrapper#achcontent > #title {
+    grid-row: 1 / span 1;
+}
+
 body[ss] .wrapper#achcontent > #desc {
     translate: 0 0;
+    grid-row: 2 / span 1;
 }
